# pulsar-classification

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  client.py  fly.toml  model_config.toml  predict.py  pyproject.toml  requirements.txt
.github/workflows/: build-deploy-docker.yml
configs/: model.toml  test_model.toml
deployment/: deploy_to_hf.sh
docs/: DEPLOYMENT.md  MODEL_PERFOMANCE.md
examples/: batch_prediction.json  single_prediction.json  test_cases.json
notebooks/: 01_data_exploration.ipynb  02_kaggle_submission.ipynb
outputs/metrics/: data_balance.json  feature_importances.csv  final_results.json  model_comparison.csv  model_comparison.json  training_history.json
outputs/models/: best_xgboost_model.pkl
outputs/predictions/: xgboost_prediction_probabilities.csv  xgboost_test_predictions.csv
scripts/: config.py  data_handler.py  debug_toml.py  main.py  run_training.py  setup_directories.py  training.py
src/: data_handler.py  training.py  utils.py
