[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scripts"
version = "0.0.1"
description = "Astronomy machine learning project for a binary classification task. The goal for this model, is to predict pulsar from noise. The dataset used is the HTRU2, pubicly available in the web and kaggle."
authors = [
  { name = "Michael Chadolias" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "fastapi>=0.121.2",
    "flake8",
    "isort",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pip",
    "pydantic-settings>=2.12.0",
    "python-dotenv",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "ucimlrepo>=0.0.7",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]
requires-python = "~=3.13.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["scripts"]
force_sort_within_sections = true


