[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pulsar-classification-ml"
version = "0.2.0"
description = "Astronomy machine learning project for a binary classification task. The goal for this model, is to predict pulsar from noise. The dataset used is the HTRU2, pubicly available in the web and kaggle."
authors = [
  { name = "Michael Chadolias" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    # Core dependencies needed for BOTH training and deployment
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
    "pydantic>=2.0.0",  # Added: pydantic-settings requires pydantic
    "pydantic-settings>=2.12.0",
    "python-dotenv",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
]
requires-python = ">=3.10"  # More flexible Python version

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0", 
    "isort>=5.13.0",
    "toml>=0.10.2",
]

training = [
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "kaggle>=1.7.4.5",
    "ucimlrepo>=0.0.7",
]

all = [
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
    "pydantic>=2.0.0",  # Added: pydantic-settings requires pydantic
    "pydantic-settings>=2.12.0",
    "python-dotenv",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "black>=24.0.0",
    "flake8>=7.0.0", 
    "isort>=5.13.0",
    "toml>=0.10.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "kaggle>=1.7.4.5",
    "ucimlrepo>=0.0.7",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["scripts"]
force_sort_within_sections = true

[tool.flit.module]
name = "src"

[tool.hatch.build.targets.wheel]
packages = ["src"]